--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -11,6 +11,9 @@
       {% if site.last_updated %}
         Last updated: {{ 'now' | date: '%B %d, %Y' }}.
       {% endif %}
+      <a href="{{ site.baseurl }}/mentions">
+        Mention légales
+      </a>
     </div>
   </footer>
 {% else %}
@@ -26,6 +29,9 @@
       {% if site.last_updated %}
         Last updated: {{ 'now' | date: '%B %d, %Y' }}.
       {% endif %}
+      <a href="{{ site.baseurl }}/mentions">
+        Mention légales
+      </a>
     </div>
   </footer>
 {% endif %}
